<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Danesh Yar</string>
    <string name="Derivative_formulas">فرمول های مشتق گیری</string>
    <string name="Integral_formulas">فرمول های انتگرال گیری</string>
    <string name="Decomposition_formulas">فرمول های اتحاد و تجزیه</string>
    <string name="Area_formulas">فرمول های مساحت و محیط اشکال هندسی</string>
    <string name="had_formulas">فرمول ها و محاسبات حد و پیوستگی</string>
    <string name="string_slogan">اپلیکیشن کاربردی دانشجویی</string>
    <string name="zavaya_formulas">زوایای مثلثاتی</string>
    <string name="string_about_us">درباره ما</string>
    <string name="string_home">خانه</string>
    <string name="string_tools">ابزار ها</string>
    <string name="string_kholase">خلاصه کردن</string>
    <string name="string_content_description">this is content description</string>
    <string name="string_confirm">ثبت</string>
    <string name="string_score">نمره</string>
    <string name="string_session_name">نام درس</string>
    <string name="unit">واحد</string>
    <string name="string_des">توضیحات یادداشت..</string>
    <string name="string_subject">موضوع را وارد کنید</string>
    <string name="string_edit">ثبت تغییرات</string>
    <string name="string_delete">حذف</string>
    <string name="string_class_number">محل برگزاری / شماره کلاس</string>
    <string name="string_exam_date">تاریخ امتحان نهایی</string>
    <string name="string_azad_uni">دانشگاه آزاد اسلامی</string>
    <string name="string_goverment_uni">دانشگاه سراسری</string>
    <string name="string_takhmin">تخمین معدل ترم جاری</string>
    <string name="string_average_fragment_description">اینجا من میتونم معدل درس هایی که انتخاب واحد کردی رو با استفاده از نمرات احتمالی ای که کسب میکنی،محاسبه کنم و اینطوری میتونی معدلت رو کنترل کنی..</string>
    <string name="string_note">یادداشت</string>
    <string name="string_total_average">معدل کل</string>
    <string name="string_number_of_effective_units">تعداد واحد موثر</string>
    <string name="string_selecting_units">انتخاب واحد کن..</string>
    <string name="string_selecting_unit_descrption">اینجا من میتونم انتخاب واحد یا به عبارتی برنامه هفتگی هر ترم شمارو خیلی منظم و تفکیک شده دسته بندی کنم..</string>
    <string name="string_selecting_unit_title">انتخاب واحد | برنامه هفتگی</string>
    <string name="string_unit_count_title">تعداد واحد</string>
    <string name="string_university_tools_title">ابزار های دانشگاهی</string>
    <string name="string_university_tools_description">ابزار های کمکی اپلیکیشن که در طول ترم شما به آنها نیاز پیدا خواهید کرد و شما را از بی نظیمی هایی که دارین راحت میکنه و اینطوری همه امور ترم تحصیلیتون رو یکجا انجام میدین..به همین راحتی..</string>
    <string name="string_events">ثبت رویداد ها</string>
    <string name="string_events_item_description">رویداد های هر یک از کلاس ها رو یادداشت کن تا برات اینجا نگهشون دارم</string>
    <string name="string_takhmin_moadel">تخمین معدل دانشگاهی</string>
    <string name="string_takhmin_moadel_description">معدل ترم من با نمره هایی که حدس میزنم چقدر میشه ..؟!</string>
    <string name="string_unit_selecting">برنامه ریزی هفتگی</string>
    <string name="string_unit_selecting_description">برنامه ریزی برای انتخاب واحد هر چی که نیاز دارم رو اینجا نگه میدارم..</string>
    <string name="string_continue">ادامه</string>
    <string name="string_select_day_of_week">انتخاب روز از هفته...</string>
    <string name="string_dialog_step2_helping">درس چند واحدیه؟</string>
    <string name="string_end_class">پایان کلاس</string>
    <string name="string_delete_all">حذف همه</string>
    <string name="string_close">بستن</string>
    <string name="string_hint_unit">3</string>
    <string name="string_hint_session_name">معادلات دیفرانسیل</string>
    <string name="string_show_result">مشاهده نتیجه</string>
    <string name="string_ten_check_box_description">نمره های زیر 10 در معدل کل بلااثر شوند</string>
    <string name="string_delete_description">برای حذف کردن آیتم اینجا کلیک کنید</string>
    <string name="string_session_code">مشخصه</string>
    <string name="string_session_class">شماره کلاس</string>
    <string name="string_teacher_name">نام استاد</string>
    <string name="string_unit_selection_header_title">برنامه انتخاب واحد - هفتگی</string>
    <string name="string_step2_helping">نام درس و مشخصه درس مذکور وارد شود</string>
    <string name="string_column">:</string>
    <string name="string_start_class">شروع کلاس</string>
    <string name="string_reset">حذف همه موارد</string>
    <string name="string_days">روز های هفته</string>
    <string name="string_update">ویرایش</string>
</resources>