<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@color/color_waite2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layoutDirection="ltr"
        android:orientation="horizontal">

        <TextView
            android:background="@drawable/shape_tag"
            android:backgroundTint="@color/color_waite"
            android:layout_weight="1"
            android:text="@string/string_total_average"
            android:gravity="center"
            android:textDirection="rtl"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:layout_height="match_parent"/>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/color_waite2"/>

        <TextView
            android:background="@drawable/shape_tag"
            android:backgroundTint="@color/color_waite"
            android:layout_weight="1"
            android:text="@string/string_number_of_effective_units"
            android:gravity="center"
            android:textDirection="rtl"
            android:textColor="@color/color_black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

    </LinearLayout>
    <LinearLayout
        android:paddingTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="-12dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/totalAverageTv"
            android:background="@drawable/shape_tag"
            android:backgroundTint="@color/color_waite"
            android:layout_weight="1"
            android:gravity="center"
            android:textDirection="rtl"
            android:maxLength="5"
            android:textColor="@color/color_gray_darker"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:layout_height="match_parent"/>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/color_waite2"/>

        <TextView
            android:id="@+id/unitCountTv"
            android:background="@drawable/shape_tag"
            android:backgroundTint="@color/color_waite"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:gravity="center"
            android:textDirection="rtl"
            android:textColor="@color/color_gray_darker"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <TextView
        android:id="@+id/closeBtn"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/string_close"
        android:background="@drawable/shape_tag"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/color_waite"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textDirection="rtl"
        android:textAllCaps="true"/>

</LinearLayout>