<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_waite2"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:paddingStart="2dp"
    android:paddingEnd="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_waite2"
        android:layoutDirection="rtl"
        android:orientation="vertical"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="vertical">


        <EditText
            android:id="@+id/session_teacher"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/shape_tag"
            android:backgroundTint="@color/color_waite"
            android:gravity="center|start"
            android:hint="@string/string_teacher_name"
            android:inputType="textPersonName"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:singleLine="true"
            android:textColor="@color/color_gray_darker"
            android:textSize="14sp"
            android:textStyle="normal"
            tools:ignore="Autofill" />


        <View
            android:layout_width="wrap_content"
            android:layout_height="8dp"
            android:background="@color/color_waite2" />

        <EditText
            android:id="@+id/session_class"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/shape_tag"
            android:backgroundTint="@color/color_waite"
            android:gravity="center|start"
            android:hint="@string/string_class_number"
            android:inputType="text"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:singleLine="true"
            android:textColor="@color/color_gray_darker"
            android:textSize="14sp"
            android:textStyle="normal"
            tools:ignore="Autofill" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        tools:ignore="DisableBaselineAlignment">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/right_radius"
            android:gravity="center">


            <TextView
                android:id="@+id/t_green"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/right_radius"
                android:backgroundTint="@color/color_waite"
                android:gravity="center"
                android:paddingTop="8dp"
                android:text="@string/string_start_class"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/t_green"
                android:layout_marginEnd="4dp"
                android:gravity="center"
                android:layout_marginTop="-2dp"
                android:orientation="horizontal">

                <com.shawnlin.numberpicker.NumberPicker
                    android:id="@+id/minuteStartTimeNumberPicker"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:descendantFocusability="blocksDescendants"
                    android:gravity="center"
                    app:np_dividerColor="@color/color_blue"
                    app:np_formatter="%02d"
                    app:np_max="59"
                    app:np_min="0"
                    app:np_selectedTextColor="@color/color_blue"
                    app:np_selectedTextSize="16dp"
                    app:np_textColor="@color/color_gray3"
                    app:np_textSize="14dp"
                    app:np_wrapSelectorWheel="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:gravity="center"
                    android:text="@string/string_column"
                    android:textColor="@color/color_gray3"
                    android:textSize="20sp" />


                <com.shawnlin.numberpicker.NumberPicker
                    android:id="@+id/hoursStartTimeNumberPicker"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:descendantFocusability="blocksDescendants"
                    android:gravity="center"
                    app:np_dividerColor="@color/color_blue"
                    app:np_formatter="%02d"
                    app:np_max="23"
                    app:np_min="0"
                    app:np_selectedTextColor="@color/color_blue"
                    app:np_selectedTextSize="16dp"
                    app:np_textColor="@color/color_gray3"
                    app:np_textSize="14dp"
                    app:np_wrapSelectorWheel="true" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/left_radius"
            android:gravity="center">

            <TextView
                android:id="@+id/t_red"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/left_radius"
                android:backgroundTint="@color/color_waite"
                android:gravity="center"
                android:paddingTop="8dp"
                android:text="@string/string_end_class"
                android:textColor="@color/color_gray_darker"
                android:textSize="14sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/t_red"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:layout_marginTop="-2dp"
                android:orientation="horizontal">

                <com.shawnlin.numberpicker.NumberPicker
                    android:id="@+id/minuteEndTimeNumberPicker"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:descendantFocusability="blocksDescendants"
                    android:gravity="center"
                    app:np_dividerColor="@color/color_gray_darker"
                    app:np_formatter="%02d"
                    app:np_max="59"
                    app:np_min="0"
                    app:np_selectedTextColor="@color/color_gray_darker"
                    app:np_selectedTextSize="14dp"
                    app:np_textColor="@color/color_gray3"
                    app:np_textSize="14dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:gravity="center"
                    android:text="@string/string_column"
                    android:textColor="@color/color_gray3"
                    android:textSize="20sp" />


                <com.shawnlin.numberpicker.NumberPicker
                    android:id="@+id/hoursEndTimeNumberPicker"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:descendantFocusability="blocksDescendants"
                    android:gravity="center"
                    app:np_dividerColor="@color/color_gray_darker"
                    app:np_formatter="%02d"
                    app:np_max="23"
                    app:np_min="0"
                    app:np_selectedTextColor="@color/color_gray_darker"
                    app:np_selectedTextSize="14dp"
                    app:np_textColor="@color/color_gray3"
                    app:np_textSize="14dp" />

            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>


    <TextView
        android:id="@+id/confirmBtn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/shape_tag"
        android:backgroundTint="@color/color_green"
        android:gravity="center"
        android:text="@string/string_confirm"
        android:textColor="@color/color_waite"
        android:textSize="18sp" />
    </LinearLayout>

</ScrollView>